@@ -18,14 +18,31 @@
 
 include ../../Makefile.defs
 
-TESTS = finish/success.bash finish/failure.bash terminated/terminated.bash \
-	pipestat/success.bash pipestat/failure1.bash pipestat/failure2.bash \
-	pipestat/failure3.bash warning/status.bash failure/status.bash \
-	error/status.bash usage_error/stderr.bash script_usage_err/stderr.bash \
-	setup_logging/tylf.bash setup_logging/tyln.bash \
-	setup_logging/tylu.bash setup_logging/tnlf.bash \
-	setup_logging/tnln.bash setup_logging/tnlu.bash \
-	setup_logging/tulf.bash setup_logging/tuln.bash setup_logging/tulu.bash
+TESTS = finish/success.bash \
+	finish/failure.bash \
+	terminated/terminated.bash \
+	pipestat/success.bash \
+	pipestat/failure1.bash \
+	pipestat/failure2.bash \
+	pipestat/failure3.bash \
+	warning/status.bash \
+	failure/status.bash \
+	error/status.bash \
+	usage_error/status.bash \
+	usage_error/stderr.bash \
+	usage_error/stdout.bash \
+	script_usage_err/status.bash \
+	script_usage_err/stderr.bash \
+	script_usage_err/stdout.bash \
+	setup_logging/tylf.bash \
+	setup_logging/tyln.bash \
+	setup_logging/tylu.bash \
+	setup_logging/tnlf.bash \
+	setup_logging/tnln.bash \
+	setup_logging/tnlu.bash \
+	setup_logging/tulf.bash \
+	setup_logging/tuln.bash \
+	setup_logging/tulu.bash
 
 PASS = ../runtest
 FAIL = ../runtest !
@@ -56,10 +73,17 @@ check: all
 	$(FAIL) failure/status.bash \
 		"libprometheus/failure: exit status after failure"
 	$(FAIL) error/status.bash "libprometheus/error: exit status after error"
+	$(FAIL) usage_error/status.bash "libprometheus/usage_error: exit status"
 	$(PASS) usage_error/stderr.bash \
 		"libprometheus/usage_error: function usage error reporting"
+	$(PASS) usage_error/stdout.bash \
+		"libprometheus/usage_error: output only to stderr"
+	$(FAIL) script_usage_err/status.bash \
+		"libprometheus/script_usage_err: exit status"
 	$(PASS) script_usage_err/stderr.bash \
 		"libprometheus/script_usage_err: script usage error reporting"
+	$(PASS) script_usage_err/stdout.bash \
+		"libprometheus/script_usage_err: output only to stderr"
 	$(PASS) setup_logging/tylf.bash \
 		"libprometheus/setup_logging: terminal + file"
 	$(PASS) setup_logging/tyln.bash \
