@@ -18,7 +18,7 @@
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
-# Check output of `script_usage_err'.
+# Check stderr output of `script_usage_err'.
 
 source "%LIBPROMETHEUS%" || exit 1
 
