@@ -1,4 +1,4 @@
-#! /bin/bash
+#! /bin/bash -x
 
 # Prometheus package management tool set
 # Copyright (C) 2003-2004 Oliver Brakmann <oliverbrakmann@users.berlios.de> &
@@ -18,9 +18,9 @@
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
 
-# Check stderr output of `usage_error'.
+# Check stdout output of `usage_error'.
 
 source "%LIBPROMETHEUS%" || exit 1
 
-( usage_error "function" "<arg1> <arg2>" "arg" ) 2> output.txt
-exec diff stderr.txt output.txt
+out="$(usage_error "function" "<arg1> <arg2>" "arg")"
+[[ -z "$out" ]]
